--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/base": "^5.0.0-alpha.116",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/system": "^5.11.7",
     "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
