--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
+    "@mui/x-data-grid": "^5.17.22",
     "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
