--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
     "@mui/x-data-grid": "^5.17.22",
+    "ag-grid-community": "^29.0.0",
+    "ag-grid-react": "^29.0.0",
     "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
