--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "ag-grid-community": "^29.0.0",
     "ag-grid-react": "^29.0.0",
     "axios": "^1.3.1",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
