--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "frontend-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "start-flask-app": "cd ../backend && python main.py",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/base": "^5.0.0-alpha.116",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.7",
-    "@mui/system": "^5.11.7",
-    "@mui/x-data-grid": "^5.17.22",
-    "ag-grid-community": "^29.0.0",
-    "ag-grid-react": "^29.0.0",
-    "axios": "^1.3.1",
-    "papaparse": "^5.3.2",
-    "react": "^18.2.0",
-    "react-data-table-component": "^7.5.3",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "styled-components": "^5.3.6",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
-  },
-  "proxy": "http://127.0.0.1:5000"
+	"name": "frontend-react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"start-flask-app": "cd ../backend && python main.py",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/base": "^5.0.0-alpha.116",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.7",
+		"@mui/system": "^5.11.7",
+		"@mui/x-data-grid": "^5.17.22",
+		"ag-grid-community": "^29.0.0",
+		"ag-grid-react": "^29.0.0",
+		"axios": "^1.3.1",
+		"papaparse": "^5.3.2",
+		"react": "^18.2.0",
+		"react-data-table-component": "^7.5.3",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.7.1",
+		"styled-components": "^5.3.6",
+		"xlsx": "^0.18.5",
+		"@msrvida/sanddance-react": "^4",
+		"vega": "^5.22"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@vitejs/plugin-react": "^3.0.0",
+		"vite": "^4.0.0"
+	},
+	"proxy": "http://127.0.0.1:5000"
 }
