--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"react-data-table-component": "^7.5.3",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
+		"react-router-dom": "^6.8.1",
 		"styled-components": "^5.3.6",
 		"xlsx": "^0.18.5"
 	},
