--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
 		"papaparse": "^5.3.2",
 		"react": "^18.2.0",
 		"react-data-table-component": "^7.5.3",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
 		"react-router-dom": "^6.8.1",
