--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
+		"react-iframe": "^1.8.5",
 		"react-router-dom": "^6.8.1",
 		"styled-components": "^5.3.6",
 		"xlsx": "^0.18.5"
