--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,7 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.2.0
 beautifulsoup4==4.11.2
 Brotli==1.0.9
 certifi==2022.12.7
@@ -17,8 +21,10 @@ dtale==2.12.2
 et-xmlfile==1.1.0
 Flask==2.2.2
 Flask-Compress==1.13
+Flask-Cors==3.0.10
 flask-ngrok==0.0.25
 fonttools==4.38.0
+frozenlist==1.3.3
 future==0.18.3
 idna==3.4
 itsdangerous==2.1.2
@@ -30,8 +36,10 @@ lz4==4.3.2
 MarkupSafe==2.1.2
 matplotlib==3.7.0
 missingno==0.4.2
+multidict==6.0.4
 networkx==3.0
 numpy==1.24.2
+openai==0.26.5
 openpyxl==3.1.1
 packaging==23.0
 pandas==1.5.3
@@ -52,7 +60,9 @@ statsmodels==0.13.5
 strsimpy==0.2.1
 tenacity==8.2.1
 threadpoolctl==3.1.0
+tqdm==4.64.1
 urllib3==1.26.14
 Werkzeug==2.2.3
 xarray==2023.2.0
 xlrd==2.0.1
+yarl==1.8.2
