--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"start-flask-app": "cd ../backend && python main.py",
+		"start-flask-app": "cd ../backend && python run.py",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
@@ -29,6 +29,7 @@
 		"react-icons": "^4.7.1",
 		"react-iframe": "^1.8.5",
 		"react-router-dom": "^6.8.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"styled-components": "^5.3.6",
 		"xlsx": "^0.18.5"
 	},
