--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,9 +23,11 @@ Flask==2.2.2
 Flask-Compress==1.13
 Flask-Cors==3.0.10
 flask-ngrok==0.0.25
+Flask-SQLAlchemy==3.0.3
 fonttools==4.38.0
 frozenlist==1.3.3
 future==0.18.3
+greenlet==2.0.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -55,13 +57,16 @@ scipy==1.9.3
 seaborn==0.12.2
 six==1.16.0
 soupsieve==2.4
+SQLAlchemy==2.0.5.post1
 squarify==0.4.3
 statsmodels==0.13.5
 strsimpy==0.2.1
 tenacity==8.2.1
 threadpoolctl==3.1.0
 tqdm==4.64.1
+typing_extensions==4.5.0
 urllib3==1.26.14
+waitress==2.1.2
 Werkzeug==2.2.3
 xarray==2023.2.0
 xlrd==2.0.1
