Added environment file

--- a/frontend/src/components/code/code-apps.json
+++ b/frontend/src/components/code/code-apps.json
@@ -1,17 +1,20 @@
 [
-  {
-    "name": "iCODEGEN",
-    "description": "Provide code as nanobots based on requirements...",
-    "image_path": "/src/assets/CODERFX.png"
-  },
-  {
-    "name": "CODEMILL",
-    "description": "Supports Java and .NET",
-    "image_path": "https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80"
-  },
-  {
-    "name": "ASK GPT - CODERFX",
-    "description": "ASK GPT Models using API Token",
-    "image_path": "https://images.unsplash.com/photo-1550686041-366ad85a1355?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
-  }
+	{
+		"name": "iCODEGEN",
+		"description": "◉ Provide code as nanobots based on requirements\n ◉ E.g: Pattern Search in Log Files & Send email.",
+		"image_path": "https://images.unsplash.com/photo-1550686041-366ad85a1355?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80",
+		"router_link": "/spam"
+	},
+	{
+		"name": "CODEMILL",
+		"description": "◉ Supports Java and .NET \n ◉ Uses repeatable patterns to generate code",
+		"image_path": "https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80",
+		"router_link": "/spam"
+	},
+	{
+		"name": "ASK GPT - CODERFX",
+		"description": "◉ ASK GPT Models using API Token\n◉ Customize by Finetuning your model with your 'OWN' Data into OpenAI Models and utilize",
+		"image_path": "/src/assets/CODERFX.png",
+		"router_link": "/code/chatgpt"
+	}
 ]
