--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@monaco-editor/react": "^4.4.6",
 		"@mui/base": "^5.0.0-alpha.116",
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.7",
@@ -29,6 +30,7 @@
 		"react-icons": "^4.7.1",
 		"react-iframe": "^1.8.5",
 		"react-router-dom": "^6.8.1",
+		"react-spinners": "^0.13.8",
 		"react-syntax-highlighter": "^15.5.0",
 		"styled-components": "^5.3.6",
 		"xlsx": "^0.18.5"
@@ -38,6 +40,5 @@
 		"@types/react-dom": "^18.0.9",
 		"@vitejs/plugin-react": "^3.0.0",
 		"vite": "^4.0.0"
-	},
-	"proxy": "http://127.0.0.1:5000"
+	}
 }
