--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@vitejs/plugin-react": "^3.0.0",
